new heading added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head> 
 
 <body> 
-
+<h1>creation of calculator through html ,css,javascript</h1>
 	<!-- Create table -->
 	<table id="calcu"> 
 		<tr> 
