new paragraph  added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body> 
 <h1>creation of calculator through html ,css,javascript</h1>
+
+<p>hello everyone this is a pragraph i am writting here with the help of html tag p .</p>
 	<!-- Create table -->
 	<table id="calcu"> 
 		<tr> 
